import {
  describe,
  beforeAll,
  afterAll,
  it,
  expect as globalExpect,
} from 'vitest';
import { readFile, copyFile, mkdir as makeDir, rm } from 'node:fs/promises';
import path from 'node:path';
import * as jsonc from 'jsonc-parser';

import prettierConfig from '../../packages/sku/dist/config/prettier.js';

import {
  type RenderResult,
  scopeToFixture,
  waitFor,
} from '@sku-private/testing-library';

const readFileContents = async (appDir: string, fileName: string) => {
  const contents = await readFile(path.join(appDir, fileName), 'utf-8');
  return contents;
};

const readJsonC = async (appDir: string, fileName: string) => {
  const contents = await readFileContents(appDir, fileName);
  return jsonc.parse(contents);
};

const readIgnore = async (appDir: string, fileName: string) => {
  const contents = await readFileContents(appDir, fileName);
  return contents
    .split('\n')
    .filter((ignore) => ignore && !ignore.startsWith('#')); // remove blanks and comments
};

const copyToApp = async (filename: string, folder: string) =>
  copyFile(fixturePath(filename), path.join(folder, filename));

const removeAppDir = async (folder: string) =>
  rm(folder, {
    recursive: true,
    force: true,
  });

const { sku, fixturePath } = scopeToFixture('configure');

describe('configure', () => {
  describe.concurrent('javascript app', () => {
    const appFolder = fixturePath('App');
    let configure: RenderResult;

    beforeAll(async () => {
      await removeAppDir(appFolder);
      await makeDir(appFolder);
      await makeDir(path.join(appFolder, './src'));
      await copyToApp('src/App.tsx', appFolder);
      await copyToApp('package.json', appFolder);

      configure = await sku('configure', [], {
        cwd: './App',
      });

      await waitFor(() => {
        globalExpect(configure.hasExit()).toMatchObject({ exitCode: 0 });
      });
    });

    afterAll(async () => {
      await removeAppDir(appFolder);
    });

    it('should generate a prettier config', async ({ expect }) => {
      const prettierRc = await readJsonC(appFolder, '.prettierrc');
      expect(prettierRc).toEqual(prettierConfig);
    });

    it('should generate a eslint config', async ({ expect }) => {
      const eslintConfig = await readFileContents(
        appFolder,
        'eslint.config.mjs',
      );

      expect(eslintConfig).toMatchInlineSnapshot(`
        "/** THIS FILE IS GENERATED BY SKU, MANUAL CHANGES WILL BE DISCARDED **/
        import { createEslintConfig } from 'sku/config/eslint';

        export default createEslintConfig();"
      `);
    });

    it.for(['.prettierignore', '.gitignore'])(
      'should generate %s',
      async (ignore, { expect }) => {
        const ignoreContents = await readIgnore(appFolder, ignore);

        expect(ignoreContents).toMatchSnapshot();
      },
    );

    it('should not show any warnings in the console', async ({ expect }) => {
      await waitFor(() => {
        expect(configure.hasExit()).toMatchObject({ exitCode: 0 });
      });

      expect(configure.getStdallStr()).toMatchInlineSnapshot(``);
    });
  });

  describe.concurrent('typescript app', () => {
    const appFolderTS = fixturePath('TSApp');
    let configure: RenderResult;

    beforeAll(async () => {
      await makeDir(appFolderTS);
      await makeDir(path.join(appFolderTS, './src'));
      await copyToApp('src/App.tsx', appFolderTS);
      await copyToApp('package.json', appFolderTS);
      await copyToApp('sku.config.ts', appFolderTS);

      configure = await sku('configure', [], {
        cwd: './TSApp',
      });

      await waitFor(() => {
        globalExpect(configure.hasExit()).toMatchObject({ exitCode: 0 });
      });
    });

    afterAll(async () => {
      await removeAppDir(appFolderTS);
    });

    it('should generate a prettier config', async ({ expect }) => {
      const prettierRc = await readJsonC(appFolderTS, '.prettierrc');

      expect(prettierRc).toEqual(prettierConfig);
    });

    it('should generate an eslint config', async ({ expect }) => {
      const eslintConfig = await readFileContents(
        appFolderTS,
        'eslint.config.mjs',
      );

      expect(eslintConfig).toMatchInlineSnapshot(`
        "/** THIS FILE IS GENERATED BY SKU, MANUAL CHANGES WILL BE DISCARDED **/
        import { createEslintConfig } from 'sku/config/eslint';

        export default createEslintConfig('{cwd}/fixtures/configure/TSApp/sku.config.ts');"
      `);
    });

    it('should generate tsconfig config', async ({ expect }) => {
      const tsconfigContents = await readJsonC(appFolderTS, 'tsconfig.json');

      expect(Object.keys(tsconfigContents).sort()).toEqual(['compilerOptions']);
    });

    it.for(['.prettierignore', '.gitignore'])(
      'should generate %s',
      async (ignore, { expect }) => {
        const ignoreContents = await readIgnore(appFolderTS, ignore);

        expect(ignoreContents).toMatchSnapshot();
      },
    );

    it('should not show any warnings in the console', async ({ expect }) => {
      await waitFor(() => {
        expect(configure.hasExit()).toMatchObject({ exitCode: 0 });
      });

      expect(configure.getStdallStr()).toMatchInlineSnapshot(``);
    });
  });
});
